[package]
name = "reflex"
version = "0.1.0"
edition = "2021"

[lib]
name = "reflex"
crate-type = ["cdylib"]

[dependencies]
winapi = { version = "0.3", features = [
    "winnt",
    "winuser",
    "libloaderapi",
    "processthreadsapi",
    "memoryapi",
    "errhandlingapi",
    "winreg",
    "wincrypt",
    "fileapi",
    "handleapi",
    "ioapiset",
    "ntdef",
    "minwindef",
    "synchapi",
] }
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
